# BIGHat-Program

./: .gitignore  CHANGELOG.md  ERRORS.md  README.md  ROADMAP.md  STATE.md  auth_testing.md  backend_test.py  backend_test_native.py  test_result.md
.emergent/: emergent.yml
.github/workflows/: auto-tag.yml  ci-tauri-check.yml  release.yml
_reference/standalone_v30/: 1_MAP_BIG_HAT_DRIVE.vbs  BIGHat_Launcher.vbs  BIGHat_Master_Setup.vbs  BIGHat_Update_Tool.vbs  DOCUMENTATION.md  INSTALL_INSTRUCTIONS.txt  LICENSE.md  README.md  TERMS.md  Uninstall_BIGHat.vbs  launch.bat  launch.sh
backend/: VERSION.txt  error_tracker.py  event_crawler.py  gridfs_service.py  launcher.py  models.py  notifications.py  overlay_service.py  requirements-desktop.txt  requirements.txt  schedule_routes.py  scheduler.py  server.py  sharepoint_service.py  story_generator_service.py
backend/cloud/: __init__.py  admin_router.py  config.py  download_landing.py  downloads_resolver.py  email_service.py  health_router.py  license_models.py  license_router.py  license_service.py  license_store.py  poller_router.py  squarespace_poller.py  squarespace_webhook.py
backend/native/: __init__.py  admin_router.py  asset_factory.py  async_monty.py  backup_router.py  backup_service.py  cloud_client.py  config.py  db_factory.py  feature_gate.py  files_router.py  gridfs_shim.py  hwid.py  license.py  local_asset_service.py  locations_router.py  router.py  subscription.py  sync_router.py  sync_service.py  system_config.json  updates_router.py  updates_service.py
backend/roundmaker_generated/: History_1.pptx  MC_01_A_(1).pptx  MC_Test.pptx  TestPhase3_1.pptx  Test_Format.pptx  Test_MC_01.pptx  Upload_Test_3.pptx
backend/routes/: admin.py  bighat_files.py  bingo.py  presentations.py  roundmaker.py  rounds.py  scoreboard.py  scores.py  slide_fetcher.py  sponsor_portal.py  story_builds.py  story_generator.py  trivia.py  trivia_import.py  trivia_viewer.py
backend/sponsor_models/: __init__.py
backend/sponsor_routes/: account_deletion.py  accounts.py  assets.py  auth.py  canva.py  locations.py  payments.py  placements.py  profile.py  sharepoint.py  sponsors.py  subscriptions.py  webhooks.py
backend/static/: asset-manifest.json  build_manifest.json  index.html  splash.html
backend/tests/: test_alpha24_live.py  test_alpha26_layout_migration.py  test_alpha27_layout_hardening.py  test_alpha30_no_mock_seed.py  (+59 more)
frontend/: .env  craco.config.js  package.json  tailwind.config.js
memory/: CHANGELOG.md  PRD.md
packaging/: PRODUCTION_DEPLOY_CHECKLIST.md  README.md  RELEASE_NOTES_v32.0.0-alpha.10.md  SAAS_SETUP.md  SQUARESPACE_DELIVERY_QUICKSTART.md  install_shortcut.vbs  start_bighat.vbs
scripts/: build_dmg.py  build_installer.py  build_sidecar.py  build_standalone.py  build_win32_wrapper.py  publish_github_release.py  seed_dev_license.py
src-tauri/: Cargo.toml  installer-hooks.nsh  tauri.conf.json
src-tauri/binaries/: README.md
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
test_reports/: iteration_1.json  iteration_10.json  iteration_11.json  iteration_12.json  iteration_13.json  iteration_14.json  iteration_15.json  iteration_16.json  iteration_17.json  iteration_18.json  iteration_19.json  iteration_2.json  iteration_20.json  iteration_21.json  iteration_22.json  iteration_23.json  iteration_24.json  iteration_25.json  iteration_26.json  iteration_27.json  iteration_28.json  iteration_3.json  iteration_4.json  iteration_5.json  iteration_6.json  iteration_7.json  iteration_8.json  iteration_9.json
uploaded_trivia/Trivia-Maestro_V4-main/backend/rust_pptx/: Cargo.toml
uploaded_trivia/Trivia-Maestro_V4-main/backend/rust_pptx/src/: lib.rs  models.rs  overlay.rs  pptx.rs
(+560 files in other folders)
