[package]
name = "pptx_parser"
version = "0.1.0"
edition = "2021"

[lib]
name = "pptx_parser"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.22", features = ["extension-module"] }
zip = "2.2"
quick-xml = "0.37"
base64 = "0.22"
image = "0.25"
rayon = "1.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
uuid = { version = "1.11", features = ["v4"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
